<resources>
    <string name="app_name">PRM391GroupProject</string>
    <string name="home_title">Laptop Shop</string>
    <string name="product_table">Product</string>
    <string name="product_name">ProductName</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_image_id">ImageId</string>

    <string name="navi_home">Home</string>
    <string name="navi_profile">Profile</string>
    <string name="navi_login">Login</string>
    <string name="navi_Logout">Logout</string>
    <string name="navi_cart">Cart</string>
    <string name="navi_history">History</string>
    <string name="navi_wallet">Wallet</string>
    <string name="navi_change_pass">Change Password</string>

    <string name="navi_drawer_open">Open navigation drawer</string>
    <string name="navi_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>