<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/navi_home"
            android:icon="@drawable/ic_home"/>
        <item android:id="@+id/nav_profile"
            android:title="@string/navi_profile"
            android:icon="@drawable/ic_profile"/>
        <item android:id="@+id/nav_cart"
            android:title="@string/navi_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"/>
    </group>
    <item android:id="@+id/nav_personal"
        android:title="Account">
        <menu>

            <item android:id="@+id/nav_change_pass"
                android:title="@string/navi_change_pass"
                android:icon="@drawable/ic_baseline_shopping_cart_24"/>
            <item android:id="@+id/nav_logout"
                android:title="@string/navi_Logout"
                android:icon="@drawable/ic_logout"/>
            <item android:id="@+id/nav_login"
                android:title="@string/navi_login"
                android:icon="@drawable/ic_login"/>
        </menu>
    </item>
</menu>